# barter-execution-rs

./: Cargo.toml  README.md
src/: error.rs  event_loop.rs  lib.rs  live.rs  model.rs  simulated.rs
src/exchange/: mod.rs
src/exchange/simulated/: mod.rs
src/exchange/sushiswapv3/: mod.rs
src/exchange/sushiswapv3/abi/: erc20.json
src/model/: balance.rs  mod.rs  order.rs  trade.rs
src/simulated/: account.rs  engine.rs  matches.rs  mod.rs
src/simulated/exchange/account/: balance.rs  mod.rs  order.rs
src/simulated/execution/: mod.rs
src/socket/: mod.rs
src/socket/protocol/: mod.rs  websocket.rs
src/socket/transformer/: mod.rs
tests/: simulated_exchange.rs
tests/util/: mod.rs
