[package]
name = "barter-execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Barter Ecosystem
barter-integration = "0.3.4"

# Logging
tracing = "0.1.36"

# Async
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
futures = "0.3.21"
async-trait = "0.1.57"
pin-project = "1.0.10"
reqwest = { version = "0.11.7", features = ["rustls-tls", "json"] }

# Error
thiserror = "1.0.32"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Misc
chrono = "0.4.22"
uuid = {version = "0.8.2", features = ["v4", "serde"]}