[package]
name = "barter-execution"
version = "0.2.1"
edition = "2021"
authors = ["Just A Stream <93921983+just-a-stream@users.noreply.github.com>"]
license = "MIT"
documentation = "https://docs.rs/barter-execution/"
repository = "https://github.com/barter-rs/barter-execution-rs"
readme = "README.md"
description = "High-performance and normalised trading interface capable of executing across many financial venues. Also provides a feature rich simulated exchange."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]


[dependencies]
# Barter Ecosystem
barter-integration = "0.3.4"
barter-data = "0.5.6"

# Logging
tracing = "0.1.36"

# Async
tokio = { version = "1.17.0", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
futures = "0.3.21"
async-trait = "0.1.57"
pin-project = "1.0.10"
reqwest = { version = "0.11.7", features = ["rustls-tls", "json"] }

# Error
thiserror = "1.0.32"

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Misc
uuid = {version = "0.8.2", features = ["v4", "serde"]}
chrono = {version = "0.4.22", features = ["serde"]}
parking_lot = "0.12.1"
num-traits = "0.2.15"
